###  ChessMaster2023 by Ilyin Yegor changelog  ###

###  Version 0.7  ###
	* Pieces evaluation update / 30.12.2023
	
	* Piece Mobility | + ~60 elo
	* Outposts | + ~5 elo

	* Power: 2500 elo


###  Version 0.6.1  ###
	* Several minor improvements / 29.12.2023
	
	* Bishop pair | + ~3 elo
	* Internal Iterative Deepening | + ~6 elo
	
	* Implemented position extracting and coordinate descent for future auto-tuning
	
	* Fixed operations with score pairs | - ~4 elo (most likely because it slightly affected evaluation,
	  must be okey once the scores are rebalanced)
	
	* Power: ~2434 elo

###  Version 0.6.0  ###
	* Separate endgames evaluation update / 25.12.2023
	
	* Aspiration Window + separate lone king evaluation | + ~38 elo
	* Some endgames evaluation as a draw + KNBK | + ~14 elo
	* KPsKPs endgame (no visible power boost, but plays those endgames better)
	* Aspiration Window additional widening iteration | + ~10 elo
	
	* Power: 2429 elo


###  Version 0.5  ###
	* Prunings and reductions update / 23.12.2023
	
	* Principal Variation Search | + ~10 elo
	* Futility Pruning + Razoring | + ~100 elo
	* Null Move Pruning | + ~60 elo
	* Double Null Move | + ~30 elo
	* LMR | + ~45 elo
	* Shallow Depth SEE Pruning | + ~25 elo
	* History Leaf Pruning | + ~15 elo
	
	* Mate Distance Pruning | no significant power boost, it is more helpful for analysis mode
	
	* Power: 2367 elo


###  Version 0.4  ###
	* Pawns update / 21.12.2023
	
	* Defended pawns | + ~30 elo
	* Defended pawns based on advancement | + ~10 elo
	* Passed pawns | + ~15 elo
	* Backward pawns | + ~5 elo
	* Double pawns | + ~20 elo
	* Pawn islands | + ~10 elo
	* Isolated pawns | + ~3 elo (after 1000 games)
	* Pawn distortion | + ~2 elo (after 1200 games)
	* Pawn hash tables | + ~25 elo
	
	* Added simple tuning method: the engine can read a set of positions and compute the mean evaluation error.
	
	* Simple evaluation (manual) tuning | + ~25 elo
	
	* The engine reached the level of my old engine this one is based on.
	